--- a/config-application.yml
+++ b/config-application.yml
@@ -7,7 +7,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7001/eureka #设置需要将服务注册到哪里
+      defaultZone: http://localhost:7001/eureka #设置需要将服务注册到哪里,
   instance:
     prefer-ip-address: true #是否在注册中心添加IP显示
 ---
