--- a/zuul-application.yml
+++ b/zuul-application.yml
@@ -14,7 +14,7 @@ eureka:
     prefer-ip-address: true
 zuul:
   prefix: "/aigou"   #添加前缀
-  ignored-services: "*"  #忽略所有,不能直接使用服务名访问
+  ignored-services: "*"  #忽略所有,不能直接使用服务名访问,
   routes:
     plat.serviceId: employee-provider
     plat.path: /plat/**
@@ -34,7 +34,7 @@ eureka:
     prefer-ip-address: true
 zuul:
   prefix: "/aigou"   #添加前缀
-  ignored-services: "*"  #忽略所有,不能直接使用服务名访问
+  ignored-services: "*"  #忽略所有,不能直接使用服务名访问,
   routes:
     plat.serviceId: employee-provider
     plat.path: /plat/**
