--- a/zuul-applications.yml
+++ b/zuul-applications.yml
@@ -19,6 +19,8 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
+    common.serviceId: common-privoder
+    common.path: /common/**
 ---
 server:
   port: 9528
@@ -39,5 +41,5 @@ zuul:
   routes:
     plat.serviceId: plat-service
     plat.path: /plat/**
-    product.serviceId: product-service
-    product.path: /product/**
+    common.serviceId: common-privoder
+    common.path: /common/**
