--- a/zuul-applications.yml
+++ b/zuul-applications.yml
@@ -19,7 +19,7 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
-    common.serviceId: common-privoder
+    common.serviceId: common-service
     common.path: /common/**
 ---
 server:
@@ -41,5 +41,7 @@ zuul:
   routes:
     plat.serviceId: plat-service
     plat.path: /plat/**
-    common.serviceId: common-privoder
+    product.serviceId: product-service
+    product.path: /product/**
+    common.serviceId: common-service
     common.path: /common/**
