--- a/zuul-applications.yml
+++ b/zuul-applications.yml
@@ -19,7 +19,7 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
-    common.serviceId: common-service
+    common.serviceId: common-service #提交的服务名
     common.path: /common/**
 ---
 server:
